--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#expertise" class="hover:text-blue-400">Expertise</a>
                 <a href="#services" class="hover:text-blue-400">Services</a>
                 <a href="#contact" class="hover:text-blue-400">Contact</a>
-                <a href="#book" class="bg-blue-500 px-4 py-2 rounded-lg hover:bg-blue-600">Book Consultation</a>
+                <a href="#contact" class="bg-blue-500 px-4 py-2 rounded-lg hover:bg-blue-600">Book Consultation</a>
             </div>
         </div>
     </nav>
