Updated contact info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpsTech</title>
+    <title>Nag Aditya Tech Services Ltd</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -136,7 +136,15 @@
                             <div class="space-y-4">
                                 <p class="flex items-center">
                                     <span class="text-2xl mr-4">📧</span>
-                                    <a href="mailto:nag4amzn@gmail.com" class="text-blue-500 hover:text-blue-700">nag4amzn@gmail.com</a>
+                                    <a href="mailto:eswarn.ca@gmail.com" class="text-blue-500 hover:text-blue-700">eswarn.ca@gmail.com</a>
+                                </p>
+                                <p class="flex items-center">
+                                    <span class="text-2xl mr-4">📞</span>
+                                    <a href="tel:+16399994999" class="text-blue-500 hover:text-blue-700">+1 639 999 4999</a>
+                                </p>
+                                <p class="flex items-center">
+                                    <span class="text-2xl mr-4">📍</span>
+                                    <span>1220 Rue Brebeuf, Sainte Catherine, QC J5C1L7</span>
                                 </p>
                                 <p class="text-slate-600">Based in Canada • Available for remote consulting worldwide</p>
                             </div>
