Updated company info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav class="bg-slate-900 text-white py-4 fixed w-full z-50">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">OpsTech</a>
+            <a href="#" class="text-2xl font-bold">Nag Aditya Tech Services Ltd</a>
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#overview" class="hover:text-blue-400">Overview</a>
                 <a href="#expertise" class="hover:text-blue-400">Expertise</a>
